--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.12.0",
+    "bootstrap": "^5.3.8",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   }
