--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.12.0",
     "bootstrap": "^5.3.8",
     "vue": "^3.5.21",
