--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.12.0",
     "bootstrap": "^5.3.8",
     "primeicons": "^7.0.0",
