--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "leaflet": "^1.9.4",
     "vite": "^7.1.2"
   },
   "dependencies": {
@@ -17,8 +19,13 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.12.0",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "primeicons": "^7.0.0",
+    "react-leaflet": "^5.0.0",
     "vue": "^3.5.21",
+    "vue-chartjs": "^5.3.2",
+    "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.1"
   }
 }
