--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "primeicons": "^7.0.0",
+    "qrcode": "^1.5.4",
     "react-leaflet": "^5.0.0",
     "vue": "^3.5.21",
     "vue-chartjs": "^5.3.2",
