--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^3.0.3",
     "primeicons": "^7.0.0",
     "qrcode": "^1.5.4",
+    "qrcode.vue": "^3.3.3",
     "react-leaflet": "^5.0.0",
     "vue": "^3.5.21",
     "vue-chartjs": "^5.3.2",
