--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^3.14.5"
+    "mysql2": "^3.14.5",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
