--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 # Database config
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=root
+# DB_PASS=root
+DB_PASS=
 DB_NAME=vue_todo
 
 # App server port (Node.js API)
